--- a/백준_2월/백준_2월/백준_2월.vcxproj.filters
+++ b/백준_2월/백준_2월/백준_2월.vcxproj.filters
@@ -66,5 +66,8 @@
     <ClCompile Include="back9655.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="back0.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
