백준 1343 폴리오미노
-그리디
-조금 더럽게 문제를 푼것같다..
저 문자열 해결하는데 시간이 좀 들었다.

--- a/백준_2월/백준_2월/백준_2월.vcxproj.filters
+++ b/백준_2월/백준_2월/백준_2월.vcxproj.filters
@@ -69,5 +69,8 @@
     <ClCompile Include="back15650.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="back1343.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
