백준 75699 토마토
-dfs/bfs 문제.
-int[] 배열의 크기 백만개가 되는줄 모르고 여태까지 안쓰고있었는데.. 이번에 귀찮아서 확김에 썼더니 돼서 놀랐다..!

--- a/백준_2월/백준_2월/백준_2월.vcxproj
+++ b/백준_2월/백준_2월/백준_2월.vcxproj
@@ -169,7 +169,10 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="back2217.cpp" />
+    <ClCompile Include="back2217.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="back7569.cpp" />
     <ClCompile Include="back9655.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
