백준 13305 주유소 성공
-그리디
-배열로 안풀어도 되는 문제였음. 다음엔 값 범위 확인해보고, 대충 백만 넘으면 배열 안쓰는 방식으로 푸는 법을 생각해야될 것 같음.

--- a/백준_2월/백준_2월/백준_2월.vcxproj
+++ b/백준_2월/백준_2월/백준_2월.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="back13305.cpp" />
+    <ClCompile Include="back13305.c" />
     <ClCompile Include="back1343.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
