--- a/백준_2월/백준_2월/백준_2월.vcxproj.filters
+++ b/백준_2월/백준_2월/백준_2월.vcxproj.filters
@@ -78,7 +78,7 @@
     <ClCompile Include="back7569.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="back13305.cpp">
+    <ClCompile Include="back13305.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
