--- a/백준_2월/백준_2월/백준_2월.vcxproj.filters
+++ b/백준_2월/백준_2월/백준_2월.vcxproj.filters
@@ -81,5 +81,8 @@
     <ClCompile Include="back13305.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="back2578.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
