백준 1966 큐 프린터
-시뮬레이션
-예전에 이문제 봤을 땐 풀이법이 안떠올랐는데.. 지금이 금방 풀이가 떠올라서 놀랐다

--- a/백준_2월/백준_2월/백준_2월.vcxproj.filters
+++ b/백준_2월/백준_2월/백준_2월.vcxproj.filters
@@ -84,5 +84,8 @@
     <ClCompile Include="back2578.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="back1966.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
