--- a/c++공부/study/study/study.vcxproj.filters
+++ b/c++공부/study/study/study.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="helloCpp.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="stack.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
